--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "node-sass": "^4.13.1",
     "primeicons": "^2.0.0",
     "primereact": "^3.4.0",
     "react": "^16.12.0",
